[package]
name = "kirby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
csv = "1.2.1"
reqwest = {version = "0.11.14", features = [ "blocking" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
table-extract = "0.2.2"
